added css for the card and added some functions to populate html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
-    <title>Book DataBase
-
-    </title>
+    <title>Book DataBase</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="" class="formctn">
+
+    <div class="container">
+
+    
+    <form action="" class="formctn " id="card">
         <div class="formBox">
             <label for="title" > Title</label>
             <input type="text" id="title" placeholder="title"> 
@@ -25,7 +28,10 @@
         <div id='newBtn-Container'>
             <button id='newBtn'>Add a Book</button>
         </div>
+       
     </form>
+    <div id="card"> shkjahskjda</div>
+</div>
 </body>
 <script src="script.js"></script>
 </html>
