function is working, need to work on adding function and style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="header" >
+        <h1>Book DataBase</h1>
+    </header>
 
     <div class="container">
         <div>
